# RubiksCube

./: LICENSE  README.md  RubiksCube.cabal
.stack-work/install/x86_64-osx/lts-9.13/8.0.2/doc/: doc-index.html  index.html
.stack-work/install/x86_64-osx/lts-9.13/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  ListLike-4.5.1-JT9vOPxa6nQ3C7AGlE7SFG  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  aeson-1.1.2.0-7ssY6fy1GxZGXxTPcOtf2k  aeson-pretty-0.8.5-4ArTR5pkpZX48zloKnfDNn  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  appar-0.1.4-DGWHHt2WRn9FI49prcwO9  asn1-encoding-0.9.5-45LpJZllZMcCe9NMOT8lHG  asn1-parse-0.9.4-I2xK7HlcV3s5UQwJNrjAXx  asn1-types-0.3.2-3mo9TJYjZl0E4sRVlZTwYk  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-3ql4hcH9pGfBAlE21oqFTQ  auto-update-0.1.4-EmUvNdmhEju51bHrtaEMpz  base-compat-0.9.3-KeJp8zYMpcS9WibvTcxU22  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  basement-0.0.4-5G9Gc8Ht9hD9gydJD2I2TQ  blaze-builder-0.4.0.2-LxClHUTiKUUAxWtvJ5Oeoy  byteable-0.1.1-2lU1pexQSLj1KbNO17UifQ  byteorder-1.0.4-9NlNHkBVdo7F1prFVKrkcH  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  case-insensitive-1.2.0.10-1D5OUKQ7UrJ7IpOe0di4Un  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  clock-0.7.2-8dRNleB7rysIZAOReuhpZA  cmdargs-0.10.18-1MOxB7BXiUZGCBZB9Kx8qK  conduit-1.2.12.1-CTYKTJmwFo81r4LrAKDD8i  conduit-extra-1.1.17-LHyPtC0nGlzDcgVxOcd4h4  cookie-0.4.3-LVlxdgOdUJj73o1VFenWKF  (+100 more)
src/: Applicable.hs  Color.hs  Cube.hs  Dump.hs  Face.hs  Lib.hs  Pattern.hs  Patterns.hs  Pretty.hs  Print.hs  Trial.hs  Turn.hs
test/: Spec.hs
(+10 files in other folders)
