name:                RubiksCube
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jcgentry/RubiksCube#readme
license:             BSD3
license-file:        LICENSE
author:              Jamie Gentry
maintainer:          jcgentry@mac.com
copyright:           2017 Jamie Gentry
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Cube, Pattern
  other-modules:        Color, Print, Face
  build-depends:       base >= 4.7 && < 5, ansi-terminal
  default-language:    Haskell2010

executable RubiksCube-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , RubiksCube
  default-language:    Haskell2010

test-suite RubiksCube-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, hspec, RubiksCube
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jcgentry/RubiksCube
